--- a/particle_dark/cartographie.html
+++ b/particle_dark/cartographie.html
@@ -135,7 +135,7 @@
             <div class="col-md-12 service-headline">
                 <h2 class="wow fadeIn animated"> Le systeme GPS de Google, adapté à <span> votre plan !</span></h2>
                 <p class="wow fadeIn animated">
-                  Nous vous fournissons un plan intéractif de votre espace à vos clients. <br>
+                  Nous fournissons un plan intéractif de votre espace à vos visiteurs. <br>
                   Aidez vos visiteurs à s'orienter sans papier.
                 </p>
             </div>
@@ -152,7 +152,7 @@
                         </div>
                         <div class="text">
                             <h4>Géolocalisation précise</h4>
-                            <p>La précision de Google Maps sur votre plan. </p>
+                            <p>La précision de OpenStreetMap sur votre plan. </p>
                         </div>
                         <br><br>
                     </div>
@@ -162,10 +162,20 @@
                         </div>
                         <div class="text">
                             <h4>Temps réel</h4>
-                            <p>Le rafraichissement instantané offre un outil à vos clients pour s'orienter facilement</p>
+                            <p>Le rafraichissement instantané offre un outil performant à vos visiteurs pour s'orienter facilement</p>
                         </div>
                     </div>
                     <br><br>
+                    <div class="service-2 wow fadeIn animated">
+                        <div class="icons">
+                            <i class="material-icons">account_balance</i>
+                        </div>
+                        <div class="text">
+                            <h4>Mise en valeur des lieux</h4>
+                            <p>Les lieux du plan sont en interaction avec vos visiteurs.</p>
+                        </div>
+                        <br><br>
+                    </div>
 
                 </div>
             </div>
@@ -206,7 +216,7 @@
             <div class="col-md-12 service-headline">
                 <h2 class="wow fadeIn animated"> Orientez <span> vos visiteurs</span> dans <span> votre espace !</span></h2>
                 <p class="wow fadeIn animated">
-                  Fournissez des itinéraires intelligents, qui s'adaptent à la localisation de vos clients
+                  Fournissez des itinéraires intelligents, qui s'adaptent à la localisation de vos visiteurs
                 </p>
             </div>
             <!-- /.service-headline -->
@@ -216,16 +226,7 @@
                     <img src="assets/images/ipad-parcours.png" alt="iphone" id='carto-phone'>
                 </div>
                 <div class="right">
-                    <div class="service-2 wow fadeIn animated">
-                        <div class="icons">
-                            <i class="material-icons">account_balance</i>
-                        </div>
-                        <div class="text">
-                            <h4>Mise en valeur des lieux</h4>
-                            <p>Les lieux du plan sont en interaction avec vos visiteurs.</p>
-                        </div>
-                        <br><br>
-                    </div>
+
                     <div class="service-2 wow fadeIn animated">
                         <div class="icons">
                             <i class="material-icons">perm_device_information</i>
@@ -279,7 +280,7 @@
                         </div>
 
                       <br/><br/><br/><br/>
-                      
+
                         <div class="bottom-info">
                             <h4 class="wow fadeIn animated"><span>Retrouvez-nous</span> sur les réseaux</h4>
 
