--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-
+    <title>Amuseo | Concepteurs d'expériences digitales</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Amuseo | Concepteurs d'expériences digitales pour parcs et musées</title>
-
+    <meta name="author" content="Amuseo">
+    <meta name="description" content="Concepteurs d'expériences digitales pour espaces de loisirs et culturels."/>
+    <meta name="keywords" content="amuseo"/>
+  
+    <meta property="og:title" content="Amuseo | Concepteurs d'expériences digitales"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:image" content="assets/images/logo/apple-touch-icon-144x144.png"/>
+    <meta property="og:url" content="https://morman.fr"/>
+    <meta property="og:title" content="Morman Design"/>
+    <meta property="og:description" content="Concepteurs d'expériences digitales pour espaces de loisirs et culturels."/>
+  
+    <link rel="canonical" href="https://amuseo.fr">
+    <!-- ========= Favicon Icons ========= -->
+    <link rel="shortcut icon" href="favicon.ico">
+    <!-- Standard iPhone Touch Icon-->
+    <link rel="apple-touch-icon" sizes="57x57" href="assets/images/logo/apple-touch-icon-57x57.png">
+  
+    <!-- Retina iPhone Touch Icon-->
+    <link rel="apple-touch-icon" sizes="114x114" href="assets/images/logo/apple-touch-icon-114x114.png">
+    <!-- Retina iPad Touch Icon-->
+    <link rel="apple-touch-icon" sizes="144x144" href="assets/images/logo/apple-touch-icon-144x144.png">
+  
     <link rel="icon" href="favicon.ico?v=2" type="image/x-icon">
 
     <!-- Fonts -->
@@ -73,33 +90,33 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 <!-- Navigation Menu
 ================================================== -->
 <header>
-    <div id="st-logo"><a href="#page-top"><img src="assets/images/logo-blanc-amuseo.png" alt="Logo"></a></div>
+    <div id="st-logo"><a href="#page-top" title="logo"><img src="assets/images/logo-blanc-amuseo.png" alt="Logo"></a></div>
 </header>
 
 <div id="st-nav">
-    <a href="#0" class="st-nav-trigger">
+    <a href="#0" class="st-nav-trigger" title="nav">
         Menu<span></span>
     </a>
 
     <nav id="st-main-nav">
         <ul>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="#page-top">Accueil</a>
+                <a class="page-scroll hvr-underline-from-center" href="#page-top" title="Accueil">Accueil</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="#big-image">Nous</a>
+                <a class="page-scroll hvr-underline-from-center" href="#big-image" title="Nous">Nous</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="#our-work">Vos outils</a>
+                <a class="page-scroll hvr-underline-from-center" href="#our-work" title="Vos outils">Vos outils</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="#services">Notre expertise</a>
+                <a class="page-scroll hvr-underline-from-center" href="#services" title="Notre expertise">Notre expertise</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="#offres">Nos offres</a>
+                <a class="page-scroll hvr-underline-from-center" href="#offres" title="Nos offres">Nos offres</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="#contact">Contactez-nous</a>
+                <a class="page-scroll hvr-underline-from-center" href="#contact" title="Contactez-nous">Contactez-nous</a>
             </li>
         </ul>
     </nav>
@@ -129,7 +146,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <span class="skilltechtypetext"></span>
                 </div>
                 <div class="service-item-read-more">
-                        <a href="#big-image" class="arrow-down page-scroll">
+                        <a href="#big-image" class="arrow-down page-scroll" title="scroll-down">
                             <i class="fa fa-angle-down bounce" aria-hidden="true"></i>
                         </a>
                 </div>
@@ -216,9 +233,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                     <div class="sweep-content">
 
 
-                                        <h3><a href="cartographie.html#service-details">Cartographie interactive</a></h3>
+                                        <h3><a href="cartographie.html#service-details" title="Cartographie interactive">Cartographie interactive</a></h3>
                                         <p>Vos visiteurs en immersion dans votre univers</p>
-                                        <a href="cartographie.html#service-details">
+                                        <a href="cartographie.html#service-details" title="Cartographie interactive en savoir plus">
                                         <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated">En savoir plus</button>
                                       </a>
                                     </div>
@@ -238,9 +255,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <div class="sweep-layer">
                                 <div class="sweep-content">
 
-                                    <h3><a href="file-dattente.html">Attente numérisée</a></h3>
+                                    <h3><a href="file-dattente.html" title="Attente numérisée">Attente numérisée</a></h3>
                                     <p>La révolution de la file d'attente est en marche</p>
-                                    <a href="file-dattente.html">
+                                    <a href="file-dattente.html" title="Attente numérisée en savoir plus">
                                     <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated">En savoir plus</button>
                                   </a>
                                 </div>
@@ -261,9 +278,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                     <div class="sweep-content">
 
 
-                                        <h3><a href="cartographie.html#service-details-2">Orientation sur-mesure</a></h3>
+                                        <h3><a href="cartographie.html#service-details-2" title="Orientation sur-mesure">Orientation sur-mesure</a></h3>
                                         <p>Le visiteur personnalise son parcours en fonction de ses envies</p>
-                                        <a href="cartographie.html#service-details-2">
+                                        <a href="cartographie.html#service-details-2" title="Orientation sur-mesure en savoir plus">
                                         <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated">En savoir plus</button>
                                       </a>
                                     </div>
@@ -287,9 +304,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <div class="sweep-layer">
                                 <div class="sweep-content">
 
-                                    <h3><a href="communication.html">Communication éclair</a></h3>
+                                    <h3><a href="communication.html" title="Communication éclair">Communication éclair</a></h3>
                                     <p>La puissance du E-marketing pour fidéliser vos clients</p>
-                                    <a href="communication.html">
+                                    <a href="communication.html" title="Communication éclair en savoir plus">
                                     <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated">En savoir plus</button>
                                   </a>
                                 </div>
@@ -467,7 +484,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                     </div>
                     <div class="info-text wow fadeIn animated">
-                        <a href="offres.html">
+                        <a href="offres.html" title="offres">
                             <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated" href="offres.html">En savoir plus</button>
                         </a>
                     </div>
@@ -487,7 +504,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <p>Expérience client unique et adaptée</p>
                     </div>
                     <div class="info-text wow fadeIn animated">
-                        <a href="offres.html">
+                        <a href="offres.html" title="offres">
                           <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated" href="offres.html">En savoir plus</button>
                         </a>
                     </div>
@@ -507,7 +524,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <p>Le meilleur du E-marketing au service de votre business</p>
                     </div>
                     <div class="info-text wow fadeIn animated">
-                        <a href="offres.html">
+                        <a href="offres.html" title="offres">
                           <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated" href="offres.html">En savoir plus</button>
                         </a>
                     </div>
@@ -538,7 +555,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
             <div class="col-md-12">
                 <h3 class="wow fadeIn animated">Ouvrez les perspectives d'une expérience sur-mesure</h3>
-                <a class= "page-scroll" href="#contact">
+                <a class= "page-scroll" href="#contact" title="contact">
                 <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated" href="#contact">Contactez-nous</button>
                 </a>
             </div>
@@ -570,7 +587,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                 <i class="fa fa-envelope-o" aria-hidden="true"></i>
                             </div>
                             <div class="info-text wow fadeIn animated">
-                                <a href="mailto:contact@morman.fr">contact@morman.fr</a>
+                                <a href="mailto:contact@morman.fr" title="contact-email">contact@morman.fr</a>
                             </div>
                         </div>
 
@@ -581,18 +598,18 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                             <ul class="list-inline social-icons wow fadeIn animated">
                                 <li>
-                                    <a href="#">
+                                    <a href="#" title="facebook">
                                         <i class="fa fa-facebook" aria-hidden="true"></i>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="#" title="youtube">
                                         <i class="fa fa-youtube" aria-hidden="true"></i>
                                     </a>
                                 </li>
 
                                 <li>
-                                    <a href="#">
+                                    <a href="#" title="linkedin">
                                         <i class="fa fa-linkedin" aria-hidden="true"></i>
                                     </a>
                                 </li>
@@ -645,10 +662,10 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 ================================================== -->
 <footer>
     <p>
-        <a href="https://morman.fr">MORMAN DESIGN </a>© 2018
+        <a href="https://morman.fr" title="morman">MORMAN DESIGN </a>© 2018
         <br>
         <br>
-        <a href="mentions-legales.html">Mentions légales</a>
+        <a href="mentions-legales.html" title="legal">Mentions légales</a>
     </p>
 </footer>
 
