--- a/particle_dark/file-dattente.html
+++ b/particle_dark/file-dattente.html
@@ -140,7 +140,7 @@
             <div class="col-lg-12">
 
                 <div class="about-text">
-                    <h2 class="wow fadeIn animated">Une expérience <span>renouvelée</span> pour vos clients</h2><br/><br/>
+                    <h2 class="wow fadeIn animated">Une expérience <span>renouvelée</span> pour vos visiteurs</h2><br/><br/>
                       <p class="wow fadeIn animated">
                               Statistique constatée dans un parc d'attraction du nord de Paris :<br/>
                       </p>
@@ -211,10 +211,10 @@
                     </h2>
                     <br><br>
                     <h3 class="wow fadeIn animated">
-                        Une application qui permet à <span>vos clients</span> de prendre un ticket et <span>d'attendre</span> en <span>faisant autre chose.</span>
+                        Une application qui permet à <span>vos visiteurs</span> de prendre un ticket et <span>d'attendre</span> en <span>faisant autre chose.</span>
                     </h3>
                     <h3 class="wow fadeIn animated">
-                        L'application avertit de <span>l'avancement de la file d'attente</span> et lorsque leur tour approche.
+                        L'application avertit le visiteur de <span>l'avancement de la file d'attente</span> et lorsque leur tour approche.
                     </h3>
                 </div>
             </div>
@@ -235,15 +235,15 @@
 
                 <div class="service-image">
                     <img src="assets/images/iphone6_1.png" alt="iphone"> <br><br>
-                    <p>Une interface de prise de ticket directement sur votre site.</p>
+                    <p>Une interface de prise de ticket directement sur votre smartphone.</p>
                 </div>
                 <div class="service-image">
                     <img src="assets/images/iphone6_2.png" alt="iphone"><br><br>
-                    <p>L'application avertit le client de l'avancement.</p>
+                    <p>L'application avertit le visiteur de l'avancement.</p>
                 </div>
                 <div class="service-image">
                     <img src="assets/images/iphone6_3.png" alt="iphone"><br><br>
-                    <p>Le client est avertit lorsque que son tour approche.</p>
+                    <p>Le visiteur est avertit lorsque que son tour approche.</p>
                 </div>
             </div>
             <!-- .service-content -->
@@ -277,7 +277,7 @@
                                 <a href="mailto:contact@morman.fr">contact@morman.fr</a>
                             </div>
                         </div>
-                        
+
                       <br/><br/><br/><br/>
 
                         <div class="bottom-info">
