eyes in good location

--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -41,6 +41,7 @@
     <!-- Custom CSS -->
     <link href="assets/css/custom/theme.css" rel="stylesheet">
     <link href="assets/css/custom/colors.css" rel="stylesheet">
+    <link href="assets/css/custom/tableau.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -356,6 +357,16 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 </section>
 <!-- /.quote-section -->
 
+<section id="joconde">
+  <div class="eye" id='eye-left'>
+        <div class="pill"></div>
+    </div>
+    
+    <div class="eye" id='eye-right'>
+        <div class="pill"></div>
+    </div>
+  <img src="assets/images/joconde.jpg" alt="joconde">
+  </section>
 <!-- Services Section
 ================================================== -->
 <section id="services" class="services-section">
@@ -683,6 +694,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 <script src="assets/js/libraries/wow.js"></script>
 <script src="assets/js/libraries/waypoint.js"></script>
 <script src="assets/js/libraries/jquery.counterup.js"></script>
+<script src="assets/js/custom/tableau.js"></script>
 <!-- Custom Particle Theme JavaScript -->
 <script>
     var sentences = ["Créateurs <span class='orange'> d'aventures digitales<span>"];
