--- a/particle_dark/communication.html
+++ b/particle_dark/communication.html
@@ -168,7 +168,7 @@
 
             <div class="col-md-12">
                 <h2 class="wow fadeIn animated">
-                    <span>Envoyer des messages pertinents</span>
+                    Envoyer des <span>messages pertinents</span>
                 </h2>
                 <br><br>
                 <h3 class="wow fadeIn animated">
@@ -200,7 +200,7 @@
 
 <!-- Call To Action Section
 ================================================== -->
-<section id="com-call-to" class="call-to-section">
+ <!-- <section id="com-call-to" class="call-to-section">
 
     <div class="call-to-layer"></div>
 
@@ -218,12 +218,12 @@
                         Les possibilités de personnalisation sont infinies, et vous permettront de <span>booster</span> vos taux de réaction jusqu’à <span>4 fois</span>.
                 </h3>
             </div>
-            <!-- /.col-md-12 -->
+
         </div>
-        <!-- /.row -->
+
     </div>
-    <!-- /.container -->
-</section>
+
+</section>  -->
 <!-- /.call-to-section -->
 
 <!-- Contact Section
@@ -249,7 +249,7 @@
                                 <a href="mailto:contact@morman.fr">contact@morman.fr</a>
                             </div>
                         </div>
-                        
+
                       <br/><br/><br/><br/>
 
                         <div class="bottom-info">
