--- a/particle_dark/file-dattente.html
+++ b/particle_dark/file-dattente.html
@@ -211,11 +211,9 @@
                     </h2>
                     <br><br>
                     <h3 class="wow fadeIn animated">
-                        Une application qui permet à <span>vos visiteurs</span> de prendre un ticket et <span>d'attendre</span> en <span>faisant autre chose.</span>
+                        Une application qui permet de <span>faire autre chose au lieu d'attendre</span> !
                     </h3>
-                    <h3 class="wow fadeIn animated">
-                        L'application avertit le visiteur de <span>l'avancement de la file d'attente</span> et lorsque leur tour approche.
-                    </h3>
+                    
                 </div>
             </div>
             <!-- /.col-md-12 -->
@@ -235,15 +233,15 @@
 
                 <div class="service-image">
                     <img src="assets/images/iphone6_1.png" alt="iphone"> <br><br>
-                    <p>Une interface de prise de ticket directement sur votre smartphone.</p>
+                    <p>Une interface de <span>prise de ticket</span> directement sur votre smartphone.</p>
                 </div>
                 <div class="service-image">
                     <img src="assets/images/iphone6_2.png" alt="iphone"><br><br>
-                    <p>L'application avertit le visiteur de l'avancement.</p>
+                    <p>L'application avertit le visiteur de <span>l'avancement</span>.</p>
                 </div>
                 <div class="service-image">
                     <img src="assets/images/iphone6_3.png" alt="iphone"><br><br>
-                    <p>Le visiteur est avertit lorsque que son tour approche.</p>
+                    <p>Le visiteur est <span>avertit</span> lorsque que son tour approche.</p>
                 </div>
             </div>
             <!-- .service-content -->
