--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -8,25 +8,25 @@
     <meta name="author" content="Amuseo">
     <meta name="description" content="Concepteurs d'expériences digitales pour espaces de loisirs et culturels."/>
     <meta name="keywords" content="amuseo"/>
-  
+
     <meta property="og:title" content="Amuseo | Concepteurs d'expériences digitales"/>
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="assets/images/logo/apple-touch-icon-144x144.png"/>
     <meta property="og:url" content="https://morman.fr"/>
     <meta property="og:title" content="Morman Design"/>
     <meta property="og:description" content="Concepteurs d'expériences digitales pour espaces de loisirs et culturels."/>
-  
+
     <link rel="canonical" href="https://amuseo.fr">
     <!-- ========= Favicon Icons ========= -->
     <link rel="shortcut icon" href="favicon.ico">
     <!-- Standard iPhone Touch Icon-->
     <link rel="apple-touch-icon" sizes="57x57" href="assets/images/logo/apple-touch-icon-57x57.png">
-  
+
     <!-- Retina iPhone Touch Icon-->
     <link rel="apple-touch-icon" sizes="114x114" href="assets/images/logo/apple-touch-icon-114x114.png">
     <!-- Retina iPad Touch Icon-->
     <link rel="apple-touch-icon" sizes="144x144" href="assets/images/logo/apple-touch-icon-144x144.png">
-  
+
     <link rel="icon" href="favicon.ico?v=2" type="image/x-icon">
 
     <!-- Fonts -->
@@ -235,7 +235,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
 
                                         <h3><a href="cartographie.html#service-details" title="Cartographie interactive">Cartographie interactive</a></h3>
-                                        <p>Vos visiteurs en immersion dans votre univers</p>
+                                        <p>Des visiteurs totalement immergés dans votre univers</p>
                                         <a href="cartographie.html#service-details" title="Cartographie interactive en savoir plus">
                                         <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated">En savoir plus</button>
                                       </a>
@@ -256,8 +256,8 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <div class="sweep-layer">
                                 <div class="sweep-content">
 
-                                    <h3><a href="file-dattente.html" title="Attente numérisée">Attente numérisée</a></h3>
-                                    <p>La révolution de la file d'attente est en marche</p>
+                                    <h3><a href="file-dattente.html" title="Attente numérisée">File d'attente numérisée</a></h3>
+                                    <p>Evitez à vos visiteurs de faire la queue</p>
                                     <a href="file-dattente.html" title="Attente numérisée en savoir plus">
                                     <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated">En savoir plus</button>
                                   </a>
@@ -280,7 +280,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
 
                                         <h3><a href="cartographie.html#service-details-2" title="Orientation sur-mesure">Orientation sur-mesure</a></h3>
-                                        <p>Le visiteur personnalise son parcours en fonction de ses envies</p>
+                                        <p>Des parcours personnalisés en fonction des envies de vos visiteurs</p>
                                         <a href="cartographie.html#service-details-2" title="Orientation sur-mesure en savoir plus">
                                         <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated">En savoir plus</button>
                                       </a>
@@ -305,8 +305,8 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <div class="sweep-layer">
                                 <div class="sweep-content">
 
-                                    <h3><a href="communication.html" title="Communication éclair">Communication éclair</a></h3>
-                                    <p>La puissance du E-marketing pour fidéliser vos clients</p>
+                                    <h3><a href="communication.html" title="Communication éclair">Notifications ciblées</a></h3>
+                                    <p>La puissance du e-marketing pour fidéliser vos clients</p>
                                     <a href="communication.html" title="Communication éclair en savoir plus">
                                     <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated">En savoir plus</button>
                                   </a>
@@ -342,9 +342,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <br>
                     <br>
                     <h3 class="wow fadeIn animated">
-                        "N'ayez pas peur d'<span>être créatif</span> et d'<span>expérimenter</span> dans votre marketing."
+                        "C'est notre job d'améliorer <span>leur experience </span>un peu plus chaque jour."
                     </h3>
-                    <p class="wow fadeIn animated">Mike Volpe</p>
+                    <p class="wow fadeIn animated">Jeff Bezos - PDG Amazon</p>
                     <br>
                     <br>
                 </div>
@@ -357,16 +357,6 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 </section>
 <!-- /.quote-section -->
 
-<section id="joconde">
-  <div class="eye" id='eye-left'>
-        <div class="pill"></div>
-    </div>
-    
-    <div class="eye" id='eye-right'>
-        <div class="pill"></div>
-    </div>
-  <img src="assets/images/joconde.jpg" alt="joconde">
-  </section>
 <!-- Services Section
 ================================================== -->
 <section id="services" class="services-section">
@@ -376,7 +366,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         <div class="row">
 
             <div class="col-md-12 service-headline">
-                <h2 class="wow fadeIn animated"><span>Notre expertise</span></h2>
+                <h2 class="wow fadeIn animated">Notre <span>expertise</span></h2>
             </div>
             <!-- /.service-headline -->
 
@@ -385,7 +375,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <br>
                     <div class="service" style="visibility: hidden;" id="service1">
                         <div class="text">
-                            <h4>Nos experts en design adapteront vos plateformes sur tous les supports</h4>
+                            <h4>Nos experts <span>en design</span> adapteront vos plateformes sur tous les supports</h4>
 
                         </div>
                         <div class="icons">
@@ -398,16 +388,13 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <br>
                     <div class="service" style="visibility: hidden;" id="service2">
                         <div class="text">
-                            <h4>Des spécialistes en référencement vous accompagneront  </h4>
+                            <h4>Des spécialistes <span>en référencement</span> vous accompagneront  </h4>
 
                         </div>
                         <div class="icons">
                             <img src="assets/images/icon-view.png" alt="iphone">
                         </div>
                     </div>
-                </div>
-                <div class="service-image">
-                    <img src="assets/images/joconde-dessin.png" alt="iphone">
                 </div>
                 <div class="right">
                     <br>
@@ -416,9 +403,8 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <img src="assets/images/icon-like.png" alt="iphone">
                         </div>
                         <div class="text">
-                            <h4>Nos ingénieurs développent des fonctionnalités concues pour vous et vos clients</h4>
-
-
+                            <h4>Nos ingénieurs développent <span>des fonctionnalités</span> concues pour vous et vos clients</h4>
+                            <br>
                             <br>
                         </div>
                         <br>
@@ -430,11 +416,21 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <img src="assets/images/icon-business.png" alt="iphone">
                         </div>
                         <div class="text">
-                            <h4>Nos experts en intelligence numérique ont mis au point des outils orientés business de gestion</h4>
+                            <h4> <span>Des outils numériques</span> orientés business de gestion</h4>
 
 
                         </div>
                     </div>
+                </div>
+                <div id="joconde">
+                    <div class="eye" id='eye-left'>
+                      <div class="pill"></div>
+                    </div>
+
+                    <div class="eye" id='eye-right'>
+                      <div class="pill"></div>
+                    </div>
+                  <img src="assets/images/joconde.jpg" alt="joconde">
                 </div>
             </div>
             <!-- .service-content -->
@@ -695,10 +691,12 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 <script src="assets/js/libraries/waypoint.js"></script>
 <script src="assets/js/libraries/jquery.counterup.js"></script>
 <script src="assets/js/custom/tableau.js"></script>
+
 <!-- Custom Particle Theme JavaScript -->
 <script>
     var sentences = ["Créateurs <span class='orange'> d'aventures digitales<span>"];
 </script>
 <script src="assets/js/custom/particle-theme-light-yt.js"></script>
+<script src="assets/js/custom/tableau.js"></script>
 </body>
 </html>
