--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -58,17 +58,19 @@
         gtag('config', 'UA-79154607-3');
     </script>
 
+    <!--Start of Tawk.to Script-->
     <script type="text/javascript">
-        var Tawk_API=Tawk_API || {}, Tawk_LoadStart=new Date();
-        (function(){
-            var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-            s1.async=true;
-            s1.src='https://embed.tawk.to/5a9978eb4b401e45400d5b4a/default';
-            s1.charset='UTF-8';
-            s1.setAttribute('crossorigin','*');
-            s0.parentNode.insertBefore(s1,s0);
-        })();
+      var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+      (function(){
+        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+        s1.async=true;
+        s1.src='https://embed.tawk.to/5a9978eb4b401e45400d5b4a/default';
+        s1.charset='UTF-8';
+        s1.setAttribute('crossorigin','*');
+        s0.parentNode.insertBefore(s1,s0);
+      })();
     </script>
+    <!--End of Tawk.to Script-->
     <!-- Hotjar Tracking Code for https://amuseo.fr -->
     <script>
         (function(h,o,t,j,a,r){
