--- a/particle_dark/offres.html
+++ b/particle_dark/offres.html
@@ -227,7 +227,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                               <h4 class="modal-title" id="modal1Label">Application mobile adaptée</h4>
                           </div>
                           <div class="modal-body">Android</div>
-                          <div class="modal-body">ios</div>
+                          <div class="modal-body">iOS</div>
 
                       </div>
                   </div>
@@ -378,7 +378,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                           <div class="modal-header">
                               <h4 class="modal-title" id="modal1Label">Visualisation des prévisions</h4>
                           </div>
-                          <div class="modal-body">Prévision d'affluence</div>
+                          <div class="modal-body">Prévisions d'affluence</div>
                           
                       </div>
                   </div>
