include google tag manager

--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -42,21 +42,16 @@
     <link href="assets/css/custom/theme.css" rel="stylesheet">
     <link href="assets/css/custom/colors.css" rel="stylesheet">
     <link href="assets/css/custom/tableau.css" rel="stylesheet">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-79154607-3"></script>
+    
+      <!-- Google Tag Manager -->
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'UA-79154607-3');
+      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-5NMN4CR');
     </script>
+    <!-- End Google Tag Manager -->
 
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
@@ -71,6 +66,7 @@
       })();
     </script>
     <!--End of Tawk.to Script-->
+  
     <!-- Hotjar Tracking Code for https://amuseo.fr -->
     <script>
         (function(h,o,t,j,a,r){
@@ -82,9 +78,7 @@
             a.appendChild(r);
         })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
     </script>
-
-</head>
-
+</head> 
 
 <!-- The #page-top ID is part of the scrolling feature -
 the data-spy and data-target are part of the built-in Bootstrap scrollspy function -->
